--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -232,6 +232,7 @@
                 android:orientation="vertical">
 
                 <RelativeLayout
+                    android:id="@+id/rl_store"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
                     android:layout_marginLeft="15dp">
