--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/bg_white"
-        android:visibility="gone"
         android:paddingLeft="15dp">
         <!--选择地址-->
         <RelativeLayout
@@ -76,10 +75,11 @@
                     android:layout_gravity="center_vertical"
                     android:background="@drawable/icon_sousuo" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="6dp"
+                    android:background="@null"
                     android:gravity="center_vertical"
                     android:hint="请输入您的收货地址"
                     android:textColor="@color/hint_text_color"
@@ -200,11 +200,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/header"
-            android:divider="@null"
             android:defaultFocusHighlightEnabled="true"
-            android:headerDividersEnabled="true"
             android:footerDividersEnabled="true"
-            />
+            android:headerDividersEnabled="true" />
 
         <LinearLayout
             android:id="@+id/ll_empty"
@@ -212,7 +210,8 @@
             android:layout_height="match_parent"
             android:background="@color/bg_white"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="150dp"
