--- a/app/src/main/res/layout/item_home_shop.xml
+++ b/app/src/main/res/layout/item_home_shop.xml
@@ -9,8 +9,7 @@
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_margin="15dp"
-        android:scaleType="fitXY"
-        />
+        android:scaleType="fitXY" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -36,11 +35,11 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-          <LinearLayout
-              android:id="@+id/ll_star"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal"/>
+            <LinearLayout
+                android:id="@+id/ll_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
 
             <TextView
                 android:id="@+id/tv_sale_number"
@@ -103,7 +102,7 @@
         android:layout_below="@id/tv_limit_discounts"
         android:layout_marginLeft="92dp"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
