--- a/app/src/main/res/layout/item_commodity.xml
+++ b/app/src/main/res/layout/item_commodity.xml
@@ -10,7 +10,8 @@
         android:id="@+id/iv_avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:background="@drawable/tab_bnt_bj_mlj" />
+        android:background="@drawable/home_zanwutupian"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/tv_product_name"
