--- a/app/src/main/res/layout/item_shopping_cart.xml
+++ b/app/src/main/res/layout/item_shopping_cart.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_shopping"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="44dp">
 
         <TextView
