--- a/app/src/main/res/layout/item_shopping_cart.xml
+++ b/app/src/main/res/layout/item_shopping_cart.xml
@@ -65,13 +65,13 @@
             android:textColor="@color/hint_text_color"
             android:textSize="14sp" />
 
-        <ImageView
+        <com.baba.GlideImageView
+            android:id="@+id/iv_arrow"
             android:layout_width="8dp"
             android:layout_height="5dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="6dp"
-            android:layout_toRightOf="@id/tv_expand"
-            android:background="@drawable/common_xiala" />
+            android:layout_toRightOf="@id/tv_expand"/>
     </RelativeLayout>
 
     <TextView
