--- a/app/src/main/res/layout/item_home_shop.xml
+++ b/app/src/main/res/layout/item_home_shop.xml
@@ -87,11 +87,24 @@
         android:layout_width="50dp"
         android:layout_height="17dp"
         android:layout_below="@id/iv_line"
-        android:layout_marginLeft="92dp"
+        android:layout_marginStart="92dp"
         android:layout_marginTop="11dp"
+        android:layout_marginEnd="11dp"
         android:background="@drawable/bg_limit_discounts"
         android:gravity="center"
         android:text="限时折扣"
+        android:textColor="#FF853C"
+        android:textSize="10sp" />
+    <TextView
+        android:id="@+id/tv_full_reduction"
+        android:layout_width="50dp"
+        android:layout_height="17dp"
+        android:layout_below="@id/iv_line"
+        android:layout_toEndOf="@id/tv_limit_discounts"
+        android:layout_marginTop="11dp"
+        android:background="@drawable/bg_limit_discounts"
+        android:gravity="center"
+        android:text="满立减"
         android:textColor="#FF853C"
         android:textSize="10sp" />
 
