--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/ll_category_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ListView
             android:id="@+id/lv_category"
@@ -33,11 +32,17 @@
             />
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fl_shop_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="bottom">
     <RelativeLayout
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_margin="15dp"
         android:background="@drawable/bg_left_black">
 
         <TextView
@@ -98,10 +103,8 @@
         android:id="@+id/iv_shop_cat"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="29dp"
         android:visibility="invisible"
-        android:layout_alignParentBottom="true"
         android:src="@drawable/meal_bnt_gouwuche1"
         />
     <ImageView
@@ -109,8 +112,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="29dp"
-        android:layout_marginBottom="14dp"
-        android:layout_alignParentBottom="true"
         android:src="@drawable/meal_bnt_gouwuche"
         />
     <TextView
@@ -118,15 +119,19 @@
         android:layout_width="wrap_content"
         android:minWidth="20dp"
         android:layout_height="20dp"
-        android:layout_marginLeft="-8dp"
         android:visibility="invisible"
         android:text="0"
         android:gravity="center"
-        android:layout_toRightOf="@+id/iv_shop_cat"
-        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
         android:textSize="8dp"
         android:layout_marginBottom="30dp"
         android:textColor="@color/white"
         android:background="@drawable/bg_red_round"/>
+    </FrameLayout>
 
-</RelativeLayout>
+    <include
+        android:id="@+id/rl_empty"
+        layout="@layout/item_empty"
+        android:visibility="invisible" />
+
+</FrameLayout>
