--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -15,4 +15,10 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:background="@color/white"/>
+
+    <include
+        android:id="@+id/rl_empty"
+        layout="@layout/item_empty"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
