--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -172,4 +172,19 @@
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">15sp</item>
     </style>
+
+    <style name="spannable_bold_big_black">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="spannable_bold_big_yellow">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/main_color</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="spannable_default">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/hint_text_color</item>
+    </style>
 </resources>
