--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -161,37 +161,138 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_button_one"
+                        android:id="@+id/tv_cancel_order"
                         android:layout_width="84dp"
                         android:layout_height="33dp"
                         android:layout_marginLeft="15dp"
                         android:background="@drawable/bg_gray"
                         android:gravity="center"
-                        android:text=""
+                        android:text="取消订单"
                         android:textColor="@color/typed_text_color"
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/tv_button_two"
+                        android:id="@+id/tv_after_sale"
                         android:layout_width="84dp"
                         android:layout_height="33dp"
                         android:layout_marginLeft="15dp"
                         android:background="@drawable/bg_gray"
                         android:gravity="center"
-                        android:text=""
+                        android:text="申请售后"
                         android:textColor="@color/typed_text_color"
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/tv_button_three"
+                        android:id="@+id/tv_call_store"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="致电商家"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_store_information"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="商家消息"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_call_rider"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="致电骑手"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_rider_information"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="骑手消息"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_reminders"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="催单"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_one_more"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="再来一单"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_shopping"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/bg_gray"
+                        android:gravity="center"
+                        android:text="逛逛别家"
+                        android:textColor="@color/typed_text_color"
+                        android:textSize="15sp" />
+
+
+                    <TextView
+                        android:id="@+id/tv_evaluation"
                         android:layout_width="84dp"
                         android:layout_height="33dp"
                         android:layout_marginLeft="15dp"
                         android:background="@drawable/address_main_color"
                         android:gravity="center"
-                        android:text=""
+                        android:text="立即评价"
                         android:textColor="@color/main_color"
                         android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_confirm_receipt"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/address_main_color"
+                        android:gravity="center"
+                        android:text="确认收货"
+                        android:textColor="@color/main_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/tv_pay"
+                        android:layout_width="84dp"
+                        android:layout_height="33dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/address_main_color"
+                        android:gravity="center"
+                        android:text="立即支付"
+                        android:textColor="@color/main_color"
+                        android:textSize="15sp" />
+
                 </LinearLayout>
 
                 <RelativeLayout
