--- a/app/src/main/res/layout/confirm_layout.xml
+++ b/app/src/main/res/layout/confirm_layout.xml
@@ -53,7 +53,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="确定"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 
