--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -168,7 +168,6 @@
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:background="@color/bg_white"
-
         android:paddingLeft="15dp">
 
         <ImageView
@@ -193,14 +192,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingLeft="37dp">
 
         <ListView
             android:id="@+id/lv_address"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/header"
-            android:defaultFocusHighlightEnabled="true"
+            android:layout_height="wrap_content"
             android:footerDividersEnabled="true"
             android:headerDividersEnabled="true" />
 
