--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -164,42 +164,42 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="wrap_content"
         android:background="@color/bg_white"
-        android:paddingLeft="15dp">
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_shouhdz"
             android:layout_width="14dp"
             android:layout_height="14dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="14dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/icon_ic_shouhdz" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="12dp"
-            android:layout_toRightOf="@id/iv_shouhdz"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
             android:text="收货地址"
             android:textColor="#808080"
             android:textSize="14sp" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingLeft="37dp">
+        android:paddingLeft="22dp">
 
         <ListView
             android:id="@+id/lv_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:divider="@drawable/divider_left_fivteen"
             android:footerDividersEnabled="true"
             android:headerDividersEnabled="true" />
 
