--- a/app/src/main/res/layout/activity_shop_home.xml
+++ b/app/src/main/res/layout/activity_shop_home.xml
@@ -178,11 +178,11 @@
 
             <ImageView
                 android:id="@+id/iv_expand_info"
-                android:layout_width="50dp"
-                android:layout_height="47dp"
+                android:layout_width="38dp"
+                android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:padding="@dimen/sp_14"
+                android:padding="15dp"
                 android:src="@drawable/common_xiala" />
         </RelativeLayout>
     </LinearLayout>
