--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -356,7 +356,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="2dp"
                     android:orientation="horizontal">
                     <!--综合评价-->
                     <LinearLayout
