--- a/app/src/main/res/layout/item_product_name.xml
+++ b/app/src/main/res/layout/item_product_name.xml
@@ -107,10 +107,12 @@
             <TextView
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
+                android:minWidth="17dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:textColor="#333333"
-                android:text="1"
+                android:text="10"
+                android:gravity="center"
                 android:layout_toLeftOf="@+id/iv_add"
                 />
 
