TextView显示返回、商品描述为空时隐藏、注销弹出框设置颜色、修改首页分割线为虚线

--- a/app/src/main/res/layout/activity_shop_home.xml
+++ b/app/src/main/res/layout/activity_shop_home.xml
@@ -53,7 +53,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="-120dp"
         android:layout_marginRight="15dp"
-        android:background="@drawable/meal_bnt_baisebj"
+        android:background="@drawable/bg_evaluation_white"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -191,6 +191,7 @@
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:background="#FFF"
+        android:layout_marginTop="3dp"
         app:stl_defaultTabBackground="@android:color/transparent"
         app:stl_defaultTabTextColor="@drawable/tab_title_selector"
         app:stl_defaultTabTextHorizontalPadding="10dp"
