--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -10,6 +10,7 @@
     <!--搜索-->
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="44dp"
         android:background="@color/bg_white"
         android:paddingLeft="15dp">
@@ -67,6 +68,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_toRightOf="@id/iv_line">
 
                 <ImageView
@@ -170,6 +173,7 @@
         android:background="@color/bg_white"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:orientation="horizontal">
 
         <ImageView
